src/scss/main.scss
/* General */

:root {
  --black: #444;
}

*,
*::before,
*::after {
  box-sizing: border-box;
}

body {
  font-family: 'Roboto', sans-serif;
  margin: 0;
  font-size: 100%;
  color: var(--black);
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  background-image: url('../assets/images/interlaced.png');
  background-size: 300px;
}

/* Typography */

h2 {
  font-weight: 700;
  letter-spacing: 0.5px;
  text-transform: uppercase;
  font-size: 1.3rem;
}

/* Header */

.site-header {
  background: linear-gradient(to right, #83a4d4, #b6fbff);
  padding: 1.5rem 1rem;
}

@media (min-width: 800px) {
  .site-header {
    padding: 2.5rem;
  }
}

header h1 {
  margin: 0;
  font-weight: 300;
  font-size: 2rem;
  text-align: center;
}

@media (min-width: 800px) {
  header h1 {
    font-size: 2.5rem;
  }
}

header svg {
  width: 1em;
  height: 1em;
  vertical-align: top;
}

/* Main */

main {
  padding: 1.5rem 1rem;
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: 1fr;
  grid-gap: 1.5rem;
  flex-grow: 1;
  flex-basis: 0;
}

@media (min-width: 800px) {
  main {
    grid-template-columns: 1fr 1fr;
    grid-gap: 3rem;
    padding: 2.5rem;
  }
}

.col {
  background: white;
  border-radius: 10px;
  padding: 1rem;
  box-shadow: 0 2px 15px #cdcdcd;
}

@media (min-width: 800px) {
  .col {
    padding: 2rem;
  }
}

.col > h2 {
  text-align: center;
  margin-top: 0;
}

.autocomplete {
  position: relative;
}

input {
  width: 100%;
  font-size: 1.2rem;
  border: 1px solid #cdcdcd;
  border-radius: 5px;
  padding: 0.5em 0.75em;
  margin-top: 0.5em;
  color: #505050;
}

.dropdown {
  --border-color: #ededed;
  position: absolute;
  width: 100%;
  margin: 5px 0 0;
  padding: 0;
  list-style: none;
  display: none;
  border: 1px solid var(--border-color);
  border-radius: 10px;
  overflow: hidden;
}

.suggestion {
  background: white;
  padding: 0.5em;
  border-bottom: 1px solid #ededed;
  display: flex;
  align-items: center;
  font-size: 1.2rem;
  cursor: pointer;
}

.suggestion:last-of-type {
  border-bottom: none;
}

.suggestion:hover {
  background-color: #f2f6fd;
}

.suggestion img {
  height: 50px;
  margin-right: 1em;
}

.suggestion [src*='placeholder'] {
  width: 45px;
}

/* Movie Details */

.movie-details {
  margin-top: 1rem;
}

.movie-details header.has-image {
  display: grid;
  grid-template-columns: 1fr 3fr;
  grid-template-rows: auto 1fr;
  grid-gap: 1em;
}

.movie-details img {
  grid-row: 1 / -1;
  max-width: 100%;
}

.movie-title {
  margin: 0;
}

.tagline {
  margin: 0;
}

.statistic {
  border: 1px solid #888;
  border-radius: 5px;
  margin-top: 1rem;
  padding: 1em;
}

.statistic p {
  margin-top: 0;
  margin-bottom: 0.25em;
  font-size: 2rem;
}

.statistic label {
  font-style: italic;
}

/* Utility */

.is-active {
  display: block;
}

